Fix display on mobile

--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -12,11 +12,17 @@
   width: 40vw;
   padding: 15px;
 }
+@media (max-width: 850px) {
+  .wrapper {
+    width: 80vw;
+  }
+}
 .headerWrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .header {
   font-family: Open Sans;
@@ -65,7 +71,8 @@
   margin: 5px;
   padding-top: 3px;
   padding-bottom: 3px;
-  width: 100%;
+  flex-grow: 1;
+  flex-wrap: wrap;
 }
 .badgeLabel {
   font-family: Open Sans;
@@ -88,6 +95,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: -5px;
+  flex-wrap: wrap;
 }
 .expired_card {
   background: var(--background);
